# music-list-manager

./: .gitignore  README.md  music_list.csv  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: publish.yml
music_list_manager/: __init__.py  __main__.py  convert.py  extract.py  rename.py  tag.py
scripts/: convert_wav_to_mp3.py  extract_music_list.py  rename_music_files.py  update_id3_tags.py
