[metadata]
name = music-list-manager
version = 1.0.0
author = Ahead Labs Open Source
author_email = info@aheadlabs.com
description = Generic CLI tool for extracting music metadata, tagging MP3s, and renaming files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahead-labs-open-source/music-list-manager
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio :: Editors and Tools

[options]
packages = find:
python_requires = >=3.8
install_requires =
    mutagen
    requests
    beautifulsoup4
    pydub

[options.entry_points]
console_scripts =
    music-list = music_list_manager.__main__:main
